# ANDataParser

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: auto_update.yml  python-unittest.yml
data/dyn/16/: scrutins.json
data/dyn/17/: scrutins.json
data/dyn/17/amendements/0265/AN/: 7.json
data/dyn/17/amendements/0324A/AN/: 1001.json  1010.json  1012.json  1019.json  1024.json  1029.json  1039.json  1040.json  1042.json  1043.json  1045.json  1049.json  1057.json  1089.json  109.json  1090.json  1094.json  1095.json  1097.json  1098.json  1099.json  1103.json  1107.json  1108.json  1109.json  1111.json  1112.json  1113.json  1114.json  1115.json  1118.json  1119.json  1120.json  1121.json  1122.json  1126.json  1127.json  1128.json  1131.json  1138.json  (+276 more)
data/dyn/17/scrutins/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+6532 more)
src/: __main__.py  helpers.py
src/models/: __init__.py  amendement.py  scrutin.py  scrutin_analyse.py
src/parsers/: __init__.py  amendement_parser.py  scrutin_analyse_parser.py  scrutin_parser.py
tests/: test_scrutin_analyse.py  test_scrutin_parser.py
tests/data/: scrutin_analyse_data.html  scrutins_data.html
(+1210 files in other folders)
